<resources>
    <string name="app_name">AndroidProject_Seokminchang</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="addBut">ADD</string>
    <string name="cancelBut">CANCEL</string>
    <string name="dateBody">Date</string>
    <string name="title_activity_news_test">NewsTest</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="score">SCORE :</string>
    <string name="todo">To do</string>
    <string name="mouse">쥐 잡기 게임</string>
    <string name="news">뉴스 보기</string>
    <string name="chosunStr">조선</string>
    <string name="khStr">경향</string>
    <string name="joinsStr">중앙</string>
    <string name="haniStr">한겨레</string>
    <string name="todo_all">ALL</string>
    <string name="todo_notFinished">남은 일들</string>
    <string name="todo_finished">끝난 일들</string>
    <string name="allNews">All</string>
</resources>
